syntax = "proto3";

package snowflake.v1;

option go_package = "github.com/amari/snowflake-monorepo/snowflake-go/pkg/proto/snowflake/v1;snowflakev1";

// Snowflake represents a unique identifier generated by the Snowflake algorithm.
message Snowflake {
  // 64-bit integer representation of the Snowflake ID.
  // This is the primary representation used in most applications and is more compact than the string representation.
  int64 int64_value = 1;

  // String representation of the Snowflake ID.
  // This is useful for systems that cannot handle 64-bit integers, such as JavaScript.
  string string_value = 2;
}
